--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#BD Tecsite
+# Configuración para una base de datos MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/tecsite
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username="root"
+spring.datasource.password=""
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Configuración de Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Puerto de la aplicación (ajusta según tus necesidades)
+server.port=8080
 
