--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost/tecsite
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=""
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql:true
+
+#Hibernate ddl-auto(create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto:update
+
+#para configurar el puerto de la aplicacion
+server.port=8090
